--- a/Graph-Gallery.qmd
+++ b/Graph-Gallery.qmd
@@ -2,11 +2,11 @@
 title: Graph Gallery
 ---
 
-👋 **CodeToolKit** is a comprehensive repository of advanced visualization codes tailored for biomedical research.
+👋 **Bizard** is a comprehensive repository of advanced visualization codes tailored for biomedical research.
 
 The toolkit includes a diverse array of charting options, from variable distributions to interactive visualizations, systematically organized to meet the unique needs of biomedical data analysis. Built on a robust foundation, each example is paired with reproducible R code, detailed annotations, and real-world datasets to ensure accessibility and practical application.
 
-With resources for both beginners and seasoned researchers, CodeToolKit empowers users to create intuitive, scientifically rigorous, and visually compelling outputs, advancing data visualization standards in the biomedical field.
+With resources for both beginners and seasoned researchers, Bizard empowers users to create intuitive, scientifically rigorous, and visually compelling outputs, advancing data visualization standards in the biomedical field.
 
 ## UNDER CONSTRUCTION [DEMO ONLY]
 
